--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
-    "react-hook-form": "^7.51.2"
+    "react-hook-form": "^7.51.2",
+    "styled-components": "^6.1.11"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.7",
@@ -50,9 +51,11 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
+    "laravel-echo": "^1.16.1",
     "postcss": "^8.4.38",
     "prettier": "^3.2.5",
     "prettier-plugin-tailwindcss": "^0.5.13",
+    "pusher-js": "^8.4.0-rc2",
     "tailwindcss": "^3.4.3",
     "ts-node": "^10.9.2",
     "typescript": "^5"
